--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,10 +34,10 @@
     <string name="followed">已追番</string>
 
     <string name="detail">详情</string>
-    
+
     <string name="play_line">播放线路</string>
     <string name="episode">选集</string>
-    
+
     <string name="recommend">相关推荐</string>
 
     <string name="error_click_to_refresh">加载出错，点击重新加载</string>
@@ -55,7 +55,7 @@
     <string name="play_not_support">该源暂时不支持播放，跳转到网页</string>
 
     <string name="long_press_fasting">长按加速中</string>
-    
+
     <string name="new_version">新版本 %1$s</string>
     <string name="goto_download">点击下载</string>
     <string name="cancel">取消</string>
@@ -69,5 +69,23 @@
     <array name="my_bangumi_menu_array">
         <item>取消追番</item>
     </array>
+    <string name="title_activity_tvactivity">Leanback TVActivity</string>
+    <string name="browse_title">Videos by Your Company</string>
+    <string name="related_movies">Related Videos</string>
+    <string name="grid_view">Grid View</string>
+    <string name="error_fragment">Error Fragment</string>
+    <string name="personal_settings">Personal Settings</string>
+    <string name="watch_trailer_1">Watch trailer</string>
+    <string name="watch_trailer_2">FREE</string>
+    <string name="rent_1">Rent By Day</string>
+    <string name="rent_2">From $1.99</string>
+    <string name="buy_1">Buy and Own</string>
+    <string name="buy_2">AT $9.99</string>
+    <string name="movie">Movie</string>
 
+    <!-- Error messages -->
+    <string name="error_fragment_message">An error occurred</string>
+    <string name="dismiss_error">Dismiss</string>
+
+    <string name="playback_tag">PLAYBACK_TAG</string>
 </resources>
