--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,7 @@
     <string name="dismiss_error">Dismiss</string>
 
     <string name="playback_tag">PLAYBACK_TAG</string>
+
+    <string name="search_results">Search results for \'%1$s\'</string>
+    <string name="no_search_results">No search results found for \'%1$s\'</string>
 </resources>
